--- a/HelloWorld/MainWindow.xaml
+++ b/HelloWorld/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HelloWorld"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="auto" Width="525">
 
     <StackPanel>
 
@@ -14,9 +14,18 @@
         <TextBlock>Enter Password:</TextBlock>
         <TextBox x:Name="uxPassword"></TextBox>
         <Button x:Name="uxSubmit" Click="uxSubmit_Click">Submit</Button>
-        
+        <Button>
+            <Button.Foreground>#FFCC0620</Button.Foreground>
+            <Button.Background>Beige</Button.Background>
+            <Button.Content>
+                <CheckBox IsChecked="False">Check Me</CheckBox>
+            </Button.Content>
+            
+        </Button>
+
         <StackPanel>
             <Image Source="C:\Users\sean\source\repos\csharp-320\HelloWorld\images\ic_thumb_up_black_24dp_2x.png" Width="50" Height="50" HorizontalAlignment="Left"></Image>
         </StackPanel>
-        </StackPanel>
+    </StackPanel>
+    
 </Window>
