--- a/HelloWorld/MainWindow.xaml
+++ b/HelloWorld/MainWindow.xaml
@@ -7,10 +7,17 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="auto" Width="525">
 
-    <StackPanel>
+    <StackPanel x:Name="uxContainer">
 
         <TextBlock>Enter Name:</TextBlock>
-        <TextBox x:Name="uxName" TextChanged="uxName_TextChanged"></TextBox>
+        <TextBox x:Name="uxName" 
+                 TextChanged="uxName_TextChanged"
+                 Text="{Binding Name, 
+                 UpdateSourceTrigger=PropertyChanged, 
+                 ValidatesOnDataErrors=True}">
+        </TextBox>
+        <Label x:Name="uxNameError" 
+            Content="{Binding NameError, UpdateSourceTrigger=PropertyChanged}"></Label>
         <TextBlock>Enter Password:</TextBlock>
         <TextBox x:Name="uxPassword" TextChanged="uxPassword_TextChanged"></TextBox>
         <Button x:Name="uxSubmit" Click="uxSubmit_Click">Submit</Button>
