--- a/HelloWorld/MainWindow.xaml
+++ b/HelloWorld/MainWindow.xaml
@@ -11,7 +11,7 @@
 
         <TextBlock>Enter Name:</TextBlock>
         <TextBox x:Name="uxName" 
-                 TextChanged="uxName_TextChanged"
+                 TextChanged="uxTextBox_TextChanged"
                  Text="{Binding Name, 
                  UpdateSourceTrigger=PropertyChanged, 
                  ValidatesOnDataErrors=True}">
@@ -19,7 +19,7 @@
         <Label x:Name="uxNameError" 
             Content="{Binding NameError, UpdateSourceTrigger=PropertyChanged}"></Label>
         <TextBlock>Enter Password:</TextBlock>
-        <TextBox x:Name="uxPassword" TextChanged="uxPassword_TextChanged"></TextBox>
+        <TextBox x:Name="uxPassword" TextChanged="uxTextBox_TextChanged"></TextBox>
         <Button x:Name="uxSubmit" Click="uxSubmit_Click">Submit</Button>
         <Button>
             <Button.Foreground>#FFCC0620</Button.Foreground>
