--- a/HelloWorld/MainWindow.xaml
+++ b/HelloWorld/MainWindow.xaml
@@ -19,7 +19,12 @@
         <Label x:Name="uxNameError" 
             Content="{Binding NameError, UpdateSourceTrigger=PropertyChanged}"></Label>
         <TextBlock>Enter Password:</TextBlock>
-        <TextBox x:Name="uxPassword" TextChanged="uxTextBox_TextChanged"></TextBox>
+        <TextBox x:Name="uxPassword"
+                 TextChanged="uxTextBox_TextChanged"
+                 Text="{Binding Password, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}">
+        </TextBox>
+        <Label x:Name="uxPasswordError" 
+            Content="{Binding PasswordError, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"></Label>
         <Button x:Name="uxSubmit" Click="uxSubmit_Click">Submit</Button>
         <Button>
             <Button.Foreground>#FFCC0620</Button.Foreground>
