--- a/final_proj/Formula1/Formula1App/DriverWindow.xaml
+++ b/final_proj/Formula1/Formula1App/DriverWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Formula1App"
         mc:Ignorable="d"
-        Title="DriverWindow" Height="300" Width="350">
+        Title="DriverWindow" Height="180" Width="230">
     <Grid x:Name="uxGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
@@ -21,23 +21,17 @@
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right">Name:</TextBlock>
-        <TextBox x:Name="uxName" Grid.Column="1" Grid.Row="0"></TextBox>
+        <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right">Driver Name:</TextBlock>
+        <TextBox x:Name="uxDriverName" Grid.Column="1" Grid.Row="0"></TextBox>
 
-        <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right">Email:</TextBlock>
-        <TextBox x:Name="uxEmail" Grid.Column="1" Grid.Row="1"></TextBox>
+        <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right">Team Name:</TextBlock>
+        <TextBox x:Name="uxTeamName" Grid.Column="1" Grid.Row="1"></TextBox>
 
-        <TextBlock Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right">Phone Number:</TextBlock>
-        <TextBox x:Name="uxPhoneNumber" Grid.Column="1" Grid.Row="2"></TextBox>
+        <TextBlock Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right">Position:</TextBlock>
+        <TextBox x:Name="uxPosition" Grid.Column="1" Grid.Row="2"></TextBox>
 
-        <TextBlock Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right">Phone Type:</TextBlock>
-        <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="3">
-            <RadioButton x:Name="uxHome" IsChecked="true">Home</RadioButton>
-            <RadioButton x:Name="uxMobile">Mobile</RadioButton>
-        </StackPanel>
-
-        <TextBlock Grid.Column="0" Grid.Row="5" HorizontalAlignment="Right">Notes:</TextBlock>
-        <TextBox x:Name="uxNotes" Grid.Column="1" Grid.Row="5" AcceptsReturn="True" TextWrapping="Wrap" Height="60"></TextBox>
+        <TextBlock Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right">Points:</TextBlock>
+        <TextBox x:Name="uxPoints" Grid.Column="1" Grid.Row="2"></TextBox>
 
         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="6" HorizontalAlignment="Right">
             <Button x:Name="uxSubmit"  MinWidth="10" HorizontalAlignment="Center" Click="uxSubmit_Click" Margin="10">Add</Button>
