exercise fix uxContextFileDelete to disabled when no contact highlighted

--- a/from_csharp-client/ContactApp/ContactApp/MainWindow.xaml
+++ b/from_csharp-client/ContactApp/ContactApp/MainWindow.xaml
@@ -9,11 +9,13 @@
     <StackPanel Orientation="Vertical">
         <Menu>
             <MenuItem Header="_File">
-                <MenuItem x:Name="uxFileNew" Header="_New" Click="uxFileNew_Click">                    
-                </MenuItem>                
+                <MenuItem x:Name="uxFileNew" Header="_New" Click="uxFileNew_Click">
+                </MenuItem>
+                <MenuItem x:Name="uxFileDelete" Header="_Delete" Click="uxFileDelete_Click" Loaded="uxFileDelete_Loaded" />
+            
             </MenuItem>
         </Menu>
-        <ListView x:Name="uxContactList" Height="200">
+        <ListView x:Name="uxContactList" Height="200" SelectionChanged="uxContactList_SelectionChanged">
             <ListView.ContextMenu>
                 <ContextMenu>
                     <MenuItem x:Name="uxContextFileNew" Header="_New" Click="uxFileNew_Click"/>
