--- a/from_csharp-client/ContactApp/ContactApp/ContactWindow.xaml
+++ b/from_csharp-client/ContactApp/ContactApp/ContactWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ContactApp"
         mc:Ignorable="d"
         Title="ContactWindow" Width="300" Height="240"
-        FocusManager.FocusedElement="{Binding ElementName=uxName}">
+        FocusManager.FocusedElement="{Binding ElementName=uxName}" Loaded="Window_Loaded">
 
     <Grid x:Name="uxGrid">
         <Grid.ColumnDefinitions>
@@ -24,13 +24,13 @@
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right">Name:</TextBlock>
-        <TextBox x:Name="uxName" Grid.Column="1" Grid.Row="0"></TextBox>
+        <TextBox x:Name="uxName" Text="{Binding Name}" Grid.Column="1" Grid.Row="0"></TextBox>
 
         <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right">Email:</TextBlock>
-        <TextBox x:Name="uxEmail" Grid.Column="1" Grid.Row="1"></TextBox>
+        <TextBox x:Name="uxEmail" Text="{Binding Email}" Grid.Column="1" Grid.Row="1"></TextBox>
 
         <TextBlock Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right">Phone Number:</TextBlock>
-        <TextBox x:Name="uxPhoneNumber" Grid.Column="1" Grid.Row="2"></TextBox>
+        <TextBox x:Name="uxPhoneNumber" Text="{Binding PhoneNumber}" Grid.Column="1" Grid.Row="2"></TextBox>
 
         <TextBlock Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right">Phone Type:</TextBlock>
         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="3">
@@ -39,7 +39,7 @@
         </StackPanel>
 
         <TextBlock Grid.Column="0" Grid.Row="5" HorizontalAlignment="Right">Notes:</TextBlock>
-        <TextBox x:Name="uxNotes" Grid.Column="1" Grid.Row="5" AcceptsReturn="True" TextWrapping="Wrap" Height="60"></TextBox>
+        <TextBox x:Name="uxNotes" Text="{Binding Notes}" Grid.Column="1" Grid.Row="5" AcceptsReturn="True" TextWrapping="Wrap" Height="60"></TextBox>
 
         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="6" HorizontalAlignment="Right">
             <Button x:Name="uxSubmit"  MinWidth="10" HorizontalAlignment="Center" Click="uxSubmit_Click" Margin="10">Add</Button>
