data validation for name is working

--- a/from_csharp-client/ContactApp/ContactApp/ContactWindow.xaml
+++ b/from_csharp-client/ContactApp/ContactApp/ContactWindow.xaml
@@ -24,7 +24,11 @@
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right">Name:</TextBlock>
-        <TextBox x:Name="uxName" Text="{Binding Name}" Grid.Column="1" Grid.Row="0"></TextBox>
+        <!--<TextBox x:Name="uxName" Text="{Binding Name}" Grid.Column="1" Grid.Row="0"></TextBox>-->
+        <StackPanel Orientation="Vertical" Grid.Row="0" Grid.Column="1">
+            <TextBox x:Name="uxName" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"></TextBox>
+            <TextBlock x:Name="uxNameError" Text="{Binding NameError, UpdateSourceTrigger=PropertyChanged}"></TextBlock>
+        </StackPanel>
 
         <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right">Email:</TextBlock>
         <TextBox x:Name="uxEmail" Text="{Binding Email}" Grid.Column="1" Grid.Row="1"></TextBox>
