--- a/from_csharp-client/ContactApp/ContactApp/ContactWindow.xaml
+++ b/from_csharp-client/ContactApp/ContactApp/ContactWindow.xaml
@@ -31,7 +31,11 @@
         </StackPanel>
 
         <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right">Email:</TextBlock>
-        <TextBox x:Name="uxEmail" Text="{Binding Email}" Grid.Column="1" Grid.Row="1"></TextBox>
+        <!--<TextBox x:Name="uxEmail" Text="{Binding Email}" Grid.Column="1" Grid.Row="1"></TextBox>-->
+        <StackPanel Orientation="Vertical" Grid.Row="1" Grid.Column="1">
+            <TextBox x:Name="uxEmail" Text="{Binding Email, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"></TextBox>
+            <TextBlock x:Name="uxEmailError" Text="{Binding EmailError, UpdateSourceTrigger=PropertyChanged}"></TextBlock>
+        </StackPanel>
 
         <TextBlock Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right">Phone Number:</TextBlock>
         <TextBox x:Name="uxPhoneNumber" Text="{Binding PhoneNumber}" Grid.Column="1" Grid.Row="2"></TextBox>
