email exercise complete

--- a/Exercises/HelloWorldASP_MVC/Views/Home/Thanks.cshtml
+++ b/Exercises/HelloWorldASP_MVC/Views/Home/Thanks.cshtml
@@ -6,7 +6,7 @@
 <h1>Thank you, @Model.Name</h1>
 @if (Model.WillAttend == true)
 {
-    @:Thanks for coming!
+    @:Thanks for coming! We will send a confirmation to @Model.Email
 }
 else
 {
