--- a/Exercises/HelloWorldASP_MVC/Views/Home/RsvpForm.cshtml
+++ b/Exercises/HelloWorldASP_MVC/Views/Home/RsvpForm.cshtml
@@ -30,6 +30,12 @@
                 </div>
 
                 <div class="form-group">
+                    <label class="control-label" for="Email">Email</label>
+                    <input class="form-control" type="text" id="Email" name="Email" value="" />
+                    <span class="text-danger field-validation-valid" data-valmsg-for="Email" data-valmsg-replace="true"></span>
+                </div>
+
+                <div class="form-group">
                     <label class="control-label" for="WillAttend">WillAttend</label>
                     <select class="form-control" id="WillAttend" name="WillAttend">
                         <option value="">Choose an option</option>
