--- a/final_proj/Formula1/Formula1App/MainWindow.xaml
+++ b/final_proj/Formula1/Formula1App/MainWindow.xaml
@@ -11,6 +11,8 @@
             <MenuItem Header="_File">
                 <MenuItem x:Name="uxFileNew" Header="_New" Click="uxFileNew_Click">
                 </MenuItem>
+                <MenuItem x:Name="uxFileChange" Header="_Change" Click="uxFileChange_Click">
+                </MenuItem>
             </MenuItem>
         </Menu>
         <ListView x:Name="uxContactList" Height="200">
