--- a/final_proj/Formula1/Formula1App/MainWindow.xaml
+++ b/final_proj/Formula1/Formula1App/MainWindow.xaml
@@ -13,6 +13,8 @@
                 </MenuItem>
                 <MenuItem x:Name="uxFileChange" Header="_Change" Click="uxFileChange_Click">
                 </MenuItem>
+                <MenuItem x:Name="uxFileListAll" Header="_List All" Click="uxFileListAll_Click">
+                </MenuItem>
             </MenuItem>
         </Menu>
         <ListView x:Name="uxContactList" Height="200">
