--- a/final_proj/Formula1/Formula1App/MainWindow.xaml
+++ b/final_proj/Formula1/Formula1App/MainWindow.xaml
@@ -15,6 +15,8 @@
                 </MenuItem>
                 <MenuItem x:Name="uxFileListAll" Header="_List All" Click="uxFileListAll_Click">
                 </MenuItem>
+                <MenuItem x:Name="uxFileQuit" Header="_Quit" Click="uxFileQuit_Click">
+                </MenuItem>
             </MenuItem>
         </Menu>
         <ListView x:Name="uxContactList" Height="200">
