--- a/final_proj/Formula1/Formula1App/DriverWindow.xaml
+++ b/final_proj/Formula1/Formula1App/DriverWindow.xaml
@@ -23,7 +23,7 @@
 
         <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right">Driver Name:</TextBlock>
         <TextBox x:Name="uxDriverName" Grid.Column="1" Grid.Row="0"></TextBox>
-
+        
         <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right">Team Name:</TextBlock>
         <TextBox x:Name="uxTeamName" Grid.Column="1" Grid.Row="1"></TextBox>
 
@@ -32,6 +32,8 @@
 
         <TextBlock Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right">Points:</TextBlock>
         <TextBox x:Name="uxPoints" Grid.Column="1" Grid.Row="3"></TextBox>
+
+        <TextBox x:Name ="uxFieldError" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" Foreground="Red"></TextBox>
 
         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="6" HorizontalAlignment="Right">
             <Button x:Name="uxSubmit"  MinWidth="10" HorizontalAlignment="Center" Click="uxSubmit_Click" Margin="10">Add</Button>
