--- a/final_proj/Formula1/Formula1App/ChangeWindow.xaml
+++ b/final_proj/Formula1/Formula1App/ChangeWindow.xaml
@@ -36,6 +36,8 @@
         <TextBlock Grid.Column="0" Grid.Row="4" HorizontalAlignment="Right">Points:</TextBlock>
         <TextBox x:Name="uxPoints" Grid.Column="1" Grid.Row="4"></TextBox>
 
+        <TextBlock x:Name ="uxFieldError" Grid.Column="1" Grid.Row="5" HorizontalAlignment="Left" Foreground="Red"></TextBlock>
+
         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="6" HorizontalAlignment="Right">
             <Button x:Name="uxSubmit"  MinWidth="10" HorizontalAlignment="Center" Click="uxSubmit_Click" Margin="10">Add</Button>
             <Button x:Name="uxCancel"  MinWidth="10" HorizontalAlignment="Center" Click="uxCancel_Click" Margin="10">Cancel</Button>
