--- a/final_proj/Formula1/Formula1App/DriverWindow.xaml
+++ b/final_proj/Formula1/Formula1App/DriverWindow.xaml
@@ -33,7 +33,7 @@
         <TextBlock Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right">Points:</TextBlock>
         <TextBox x:Name="uxPoints" Grid.Column="1" Grid.Row="3"></TextBox>
 
-        <TextBox x:Name ="uxFieldError" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" Foreground="Red"></TextBox>
+        <TextBlock x:Name ="uxFieldError" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" Foreground="Red"></TextBlock>
 
         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="6" HorizontalAlignment="Right">
             <Button x:Name="uxSubmit"  MinWidth="10" HorizontalAlignment="Center" Click="uxSubmit_Click" Margin="10">Add</Button>
