added on submit field validation for ChangeWindow

--- a/final_proj/Formula1/Formula1App/ChangeWindow.xaml
+++ b/final_proj/Formula1/Formula1App/ChangeWindow.xaml
@@ -39,7 +39,7 @@
         <TextBlock x:Name ="uxFieldError" Grid.Column="1" Grid.Row="5" HorizontalAlignment="Left" Foreground="Red"></TextBlock>
 
         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="6" HorizontalAlignment="Right">
-            <Button x:Name="uxSubmit"  MinWidth="10" HorizontalAlignment="Center" Click="uxSubmit_Click" Margin="10">Add</Button>
+            <Button x:Name="uxSubmit"  MinWidth="10" HorizontalAlignment="Center" Click="uxSubmit_Click" Margin="10">Update</Button>
             <Button x:Name="uxCancel"  MinWidth="10" HorizontalAlignment="Center" Click="uxCancel_Click" Margin="10">Cancel</Button>
         </StackPanel>
     </Grid>
