--- a/Homework6/Homework6/Views/Home/Index.cshtml
+++ b/Homework6/Homework6/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
 
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="RsvpForm">
+            <form asp-action="CardSent" method="post">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="From" class="control-label"></label>
