--- a/Homework6/Homework6/Views/Home/CardSent.cshtml
+++ b/Homework6/Homework6/Views/Home/CardSent.cshtml
@@ -8,7 +8,12 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
+    <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <style>
+        body {
+            background-color: #f1f1f1;
+        }
+    </style>
     <title>CardSent</title>
 </head>
 <body>
