--- a/Homework6/Homework6/Views/Home/Index.cshtml
+++ b/Homework6/Homework6/Views/Home/Index.cshtml
@@ -32,21 +32,27 @@
             <form asp-action="CardSent" method="post">
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="From" class="control-label"></label>
-                    <input asp-for="From" class="form-control" />
-                    <span asp-validation-for="From" class="text-danger"></span>
+                    <label class="control-label" for="From">From</label>
+                    <input class="form-control input-validation-error" type="text"
+                           data-val="true" data-val-required="Please enter your From" id="From" name="From" value="" />
+                    <span class="text-danger field-validation-error" data-valmsg-for="From"
+                          data-valmsg-replace="true">Please enter From</span>
                 </div>
 
                 <div class="form-group">
-                    <label asp-for="To" class="control-label"></label>
-                    <input asp-for="To" class="form-control" />
-                    <span asp-validation-for="To" class="text-danger"></span>
+                    <label asp-for="To" class="control-label">To</label>
+                    <input asp-for="To" class="form-control input-validation-error" type="text"
+                           data-val="true" data-val-required="Please enter To" id="To" name="To" value="" >
+                    <span asp-validation-for="To" class="text-danger field-validation-error" data-valmsg-for="To"
+                          data-valmsg-replace="true">Please enter To</span>
                 </div>
 
                 <div class="form-group">
-                    <label asp-for="Message" class="control-label"></label>
-                    <input asp-for="Message" class="form-control" />
-                    <span asp-validation-for="Message" class="text-danger"></span>
+                    <label asp-for="Message" class="control-label">Message</label>
+                    <input asp-for="Message" class="form-control input-validation-error" type="text"
+                           data-val="true" data-val-required="Please enter Message" id="Message" name="Message" value=""/>
+                    <span asp-validation-for="Message" class="text-danger field-validation-error" data-valmsg-for="Message"
+                          data-valmsg-replace="true">Please enter Message</span>
                 </div>
 
                 <div class="form-group">
