--- a/Homework6/Homework6/Views/Home/Index.cshtml
+++ b/Homework6/Homework6/Views/Home/Index.cshtml
@@ -24,7 +24,8 @@
     <title>Birthday Card Generator</title>
 </head>
 <body>
-    <h4>Send a Birthday Card</h4>
+    <h4>Birthday Card Generator</h4>
+    <h2>Send a Birthday Card</h2>
     <hr />
 
     <div class="row">
@@ -32,27 +33,21 @@
             <form asp-action="CardSent" method="post">
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <label class="control-label" for="From">From</label>
-                    <input class="form-control input-validation-error" type="text"
-                           data-val="true" data-val-required="Please enter your From" id="From" name="From" value="" />
-                    <span class="text-danger field-validation-error" data-valmsg-for="From"
-                          data-valmsg-replace="true">Please enter From</span>
+                    <label asp-for="From" class="control-label"></label>
+                    <input asp-for="From" class="form-control" />
+
                 </div>
 
                 <div class="form-group">
-                    <label asp-for="To" class="control-label">To</label>
-                    <input asp-for="To" class="form-control input-validation-error" type="text"
-                           data-val="true" data-val-required="Please enter To" id="To" name="To" value="" >
-                    <span asp-validation-for="To" class="text-danger field-validation-error" data-valmsg-for="To"
-                          data-valmsg-replace="true">Please enter To</span>
+                    <label asp-for="To" class="control-label"></label>
+                    <input asp-for="To" class="form-control" />
+
                 </div>
 
                 <div class="form-group">
-                    <label asp-for="Message" class="control-label">Message</label>
-                    <input asp-for="Message" class="form-control input-validation-error" type="text"
-                           data-val="true" data-val-required="Please enter Message" id="Message" name="Message" value=""/>
-                    <span asp-validation-for="Message" class="text-danger field-validation-error" data-valmsg-for="Message"
-                          data-valmsg-replace="true">Please enter Message</span>
+                    <label asp-for="Message" class="control-label"></label>
+                    <input asp-for="Message" class="form-control" />
+
                 </div>
 
                 <div class="form-group">
@@ -62,7 +57,7 @@
         </div>
     </div>
 
-    
+
 
 </body>
 </html>
